public/app/plugins/datasource/sumometrics/MetricsQueryRowParser.js
// Generated from /Users/christian/Development/sumologic-grafana/public/app/plugins/datasource/sumometrics/MetricsQueryRow.g4 by ANTLR 4.5.1
// jshint ignore: start
var antlr4 = require('./antlr4/index');
var MetricsQueryRowListener = require('./MetricsQueryRowListener').MetricsQueryRowListener;
var MetricsQueryRowVisitor = require('./MetricsQueryRowVisitor').MetricsQueryRowVisitor;

var grammarFileName = "MetricsQueryRow.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ 'null', "'='", "'quantize'", "'to'", "'using'", 'null',
                     'null', "'|'", "'by'" ];

var symbolicNames = [ 'null', "EQ", "QUANTIZE", "TO", "USING", "TIMEQUANTIFIER",
                      "FUNCTION_NAME_NO_ARGS", "PIPE", "BY", "ID", "INT",
                      "WS" ];

var ruleNames =  [ "metricsQueryRow", "selectors", "metricName", "dimensionSelector",
                   "dimensionKey", "dimensionValue", "operator", "quantize",
                   "quantizeOperator", "timerange", "functionNameNoArgs",
                   "aggregation", "aggregationClause" ];

function MetricsQueryRowParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

MetricsQueryRowParser.prototype = Object.create(antlr4.Parser.prototype);
MetricsQueryRowParser.prototype.constructor = MetricsQueryRowParser;

Object.defineProperty(MetricsQueryRowParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

MetricsQueryRowParser.EOF = antlr4.Token.EOF;
MetricsQueryRowParser.EQ = 1;
MetricsQueryRowParser.QUANTIZE = 2;
MetricsQueryRowParser.TO = 3;
MetricsQueryRowParser.USING = 4;
MetricsQueryRowParser.TIMEQUANTIFIER = 5;
MetricsQueryRowParser.FUNCTION_NAME_NO_ARGS = 6;
MetricsQueryRowParser.PIPE = 7;
MetricsQueryRowParser.BY = 8;
MetricsQueryRowParser.ID = 9;
MetricsQueryRowParser.INT = 10;
MetricsQueryRowParser.WS = 11;

MetricsQueryRowParser.RULE_metricsQueryRow = 0;
MetricsQueryRowParser.RULE_selectors = 1;
MetricsQueryRowParser.RULE_metricName = 2;
MetricsQueryRowParser.RULE_dimensionSelector = 3;
MetricsQueryRowParser.RULE_dimensionKey = 4;
MetricsQueryRowParser.RULE_dimensionValue = 5;
MetricsQueryRowParser.RULE_operator = 6;
MetricsQueryRowParser.RULE_quantize = 7;
MetricsQueryRowParser.RULE_quantizeOperator = 8;
MetricsQueryRowParser.RULE_timerange = 9;
MetricsQueryRowParser.RULE_functionNameNoArgs = 10;
MetricsQueryRowParser.RULE_aggregation = 11;
MetricsQueryRowParser.RULE_aggregationClause = 12;

function MetricsQueryRowContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MetricsQueryRowParser.RULE_metricsQueryRow;
    return this;
}

MetricsQueryRowContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MetricsQueryRowContext.prototype.constructor = MetricsQueryRowContext;

MetricsQueryRowContext.prototype.selectors = function() {
    return this.getTypedRuleContext(SelectorsContext,0);
};

MetricsQueryRowContext.prototype.EOF = function() {
    return this.getToken(MetricsQueryRowParser.EOF, 0);
};

MetricsQueryRowContext.prototype.PIPE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(MetricsQueryRowParser.PIPE);
    } else {
        return this.getToken(MetricsQueryRowParser.PIPE, i);
    }
};


MetricsQueryRowContext.prototype.operator = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(OperatorContext);
    } else {
        return this.getTypedRuleContext(OperatorContext,i);
    }
};

MetricsQueryRowContext.prototype.aggregation = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AggregationContext);
    } else {
        return this.getTypedRuleContext(AggregationContext,i);
    }
};

MetricsQueryRowContext.prototype.enterRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.enterMetricsQueryRow(this);
	}
};

MetricsQueryRowContext.prototype.exitRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.exitMetricsQueryRow(this);
	}
};

MetricsQueryRowContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MetricsQueryRowVisitor ) {
        return visitor.visitMetricsQueryRow(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MetricsQueryRowParser.MetricsQueryRowContext = MetricsQueryRowContext;

MetricsQueryRowParser.prototype.metricsQueryRow = function() {

    var localctx = new MetricsQueryRowContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, MetricsQueryRowParser.RULE_metricsQueryRow);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 26;
        this.selectors();
        this.state = 34;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===MetricsQueryRowParser.PIPE) {
            this.state = 27;
            this.match(MetricsQueryRowParser.PIPE);
            this.state = 30;
            switch(this._input.LA(1)) {
            case MetricsQueryRowParser.QUANTIZE:
                this.state = 28;
                this.operator();
                break;
            case MetricsQueryRowParser.FUNCTION_NAME_NO_ARGS:
                this.state = 29;
                this.aggregation();
                break;
            default:
                throw new antlr4.error.NoViableAltException(this);
            }
            this.state = 36;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 37;
        this.match(MetricsQueryRowParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SelectorsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MetricsQueryRowParser.RULE_selectors;
    return this;
}

SelectorsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SelectorsContext.prototype.constructor = SelectorsContext;

SelectorsContext.prototype.metricName = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(MetricNameContext);
    } else {
        return this.getTypedRuleContext(MetricNameContext,i);
    }
};

SelectorsContext.prototype.dimensionSelector = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(DimensionSelectorContext);
    } else {
        return this.getTypedRuleContext(DimensionSelectorContext,i);
    }
};

SelectorsContext.prototype.enterRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.enterSelectors(this);
	}
};

SelectorsContext.prototype.exitRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.exitSelectors(this);
	}
};

SelectorsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MetricsQueryRowVisitor ) {
        return visitor.visitSelectors(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MetricsQueryRowParser.SelectorsContext = SelectorsContext;

MetricsQueryRowParser.prototype.selectors = function() {

    var localctx = new SelectorsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, MetricsQueryRowParser.RULE_selectors);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 41;
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        switch(la_) {
        case 1:
            this.state = 39;
            this.metricName();
            break;

        case 2:
            this.state = 40;
            this.dimensionSelector();
            break;

        }
        this.state = 49;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1+1) {
                this.state = 45;
                var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
                switch(la_) {
                case 1:
                    this.state = 43;
                    this.metricName();
                    break;

                case 2:
                    this.state = 44;
                    this.dimensionSelector();
                    break;

                }
            }
            this.state = 51;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MetricNameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MetricsQueryRowParser.RULE_metricName;
    return this;
}

MetricNameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MetricNameContext.prototype.constructor = MetricNameContext;

MetricNameContext.prototype.ID = function() {
    return this.getToken(MetricsQueryRowParser.ID, 0);
};

MetricNameContext.prototype.enterRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.enterMetricName(this);
	}
};

MetricNameContext.prototype.exitRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.exitMetricName(this);
	}
};

MetricNameContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MetricsQueryRowVisitor ) {
        return visitor.visitMetricName(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MetricsQueryRowParser.MetricNameContext = MetricNameContext;

MetricsQueryRowParser.prototype.metricName = function() {

    var localctx = new MetricNameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, MetricsQueryRowParser.RULE_metricName);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 52;
        this.match(MetricsQueryRowParser.ID);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DimensionSelectorContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MetricsQueryRowParser.RULE_dimensionSelector;
    return this;
}

DimensionSelectorContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DimensionSelectorContext.prototype.constructor = DimensionSelectorContext;

DimensionSelectorContext.prototype.dimensionKey = function() {
    return this.getTypedRuleContext(DimensionKeyContext,0);
};

DimensionSelectorContext.prototype.EQ = function() {
    return this.getToken(MetricsQueryRowParser.EQ, 0);
};

DimensionSelectorContext.prototype.dimensionValue = function() {
    return this.getTypedRuleContext(DimensionValueContext,0);
};

DimensionSelectorContext.prototype.enterRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.enterDimensionSelector(this);
	}
};

DimensionSelectorContext.prototype.exitRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.exitDimensionSelector(this);
	}
};

DimensionSelectorContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MetricsQueryRowVisitor ) {
        return visitor.visitDimensionSelector(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MetricsQueryRowParser.DimensionSelectorContext = DimensionSelectorContext;

MetricsQueryRowParser.prototype.dimensionSelector = function() {

    var localctx = new DimensionSelectorContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, MetricsQueryRowParser.RULE_dimensionSelector);
    try {
        this.state = 61;
        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 54;
            this.dimensionKey();
            this.state = 55;
            this.match(MetricsQueryRowParser.EQ);
            this.state = 56;
            this.dimensionValue();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 58;
            this.dimensionKey();
            this.state = 59;
            this.match(MetricsQueryRowParser.EQ);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DimensionKeyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MetricsQueryRowParser.RULE_dimensionKey;
    return this;
}

DimensionKeyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DimensionKeyContext.prototype.constructor = DimensionKeyContext;

DimensionKeyContext.prototype.ID = function() {
    return this.getToken(MetricsQueryRowParser.ID, 0);
};

DimensionKeyContext.prototype.enterRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.enterDimensionKey(this);
	}
};

DimensionKeyContext.prototype.exitRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.exitDimensionKey(this);
	}
};

DimensionKeyContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MetricsQueryRowVisitor ) {
        return visitor.visitDimensionKey(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MetricsQueryRowParser.DimensionKeyContext = DimensionKeyContext;

MetricsQueryRowParser.prototype.dimensionKey = function() {

    var localctx = new DimensionKeyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, MetricsQueryRowParser.RULE_dimensionKey);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 63;
        this.match(MetricsQueryRowParser.ID);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DimensionValueContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MetricsQueryRowParser.RULE_dimensionValue;
    return this;
}

DimensionValueContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DimensionValueContext.prototype.constructor = DimensionValueContext;

DimensionValueContext.prototype.ID = function() {
    return this.getToken(MetricsQueryRowParser.ID, 0);
};

DimensionValueContext.prototype.enterRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.enterDimensionValue(this);
	}
};

DimensionValueContext.prototype.exitRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.exitDimensionValue(this);
	}
};

DimensionValueContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MetricsQueryRowVisitor ) {
        return visitor.visitDimensionValue(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MetricsQueryRowParser.DimensionValueContext = DimensionValueContext;

MetricsQueryRowParser.prototype.dimensionValue = function() {

    var localctx = new DimensionValueContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, MetricsQueryRowParser.RULE_dimensionValue);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 65;
        this.match(MetricsQueryRowParser.ID);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function OperatorContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MetricsQueryRowParser.RULE_operator;
    return this;
}

OperatorContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
OperatorContext.prototype.constructor = OperatorContext;

OperatorContext.prototype.quantize = function() {
    return this.getTypedRuleContext(QuantizeContext,0);
};

OperatorContext.prototype.enterRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.enterOperator(this);
	}
};

OperatorContext.prototype.exitRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.exitOperator(this);
	}
};

OperatorContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MetricsQueryRowVisitor ) {
        return visitor.visitOperator(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MetricsQueryRowParser.OperatorContext = OperatorContext;

MetricsQueryRowParser.prototype.operator = function() {

    var localctx = new OperatorContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, MetricsQueryRowParser.RULE_operator);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 67;
        this.quantize();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function QuantizeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MetricsQueryRowParser.RULE_quantize;
    return this;
}

QuantizeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
QuantizeContext.prototype.constructor = QuantizeContext;

QuantizeContext.prototype.quantizeOperator = function() {
    return this.getTypedRuleContext(QuantizeOperatorContext,0);
};

QuantizeContext.prototype.timerange = function() {
    return this.getTypedRuleContext(TimerangeContext,0);
};

QuantizeContext.prototype.functionNameNoArgs = function() {
    return this.getTypedRuleContext(FunctionNameNoArgsContext,0);
};

QuantizeContext.prototype.TO = function() {
    return this.getToken(MetricsQueryRowParser.TO, 0);
};

QuantizeContext.prototype.USING = function() {
    return this.getToken(MetricsQueryRowParser.USING, 0);
};

QuantizeContext.prototype.enterRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.enterQuantize(this);
	}
};

QuantizeContext.prototype.exitRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.exitQuantize(this);
	}
};

QuantizeContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MetricsQueryRowVisitor ) {
        return visitor.visitQuantize(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MetricsQueryRowParser.QuantizeContext = QuantizeContext;

MetricsQueryRowParser.prototype.quantize = function() {

    var localctx = new QuantizeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, MetricsQueryRowParser.RULE_quantize);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 69;
        this.quantizeOperator();
        this.state = 74;
        _la = this._input.LA(1);
        if(_la===MetricsQueryRowParser.TO || _la===MetricsQueryRowParser.INT) {
            this.state = 71;
            _la = this._input.LA(1);
            if(_la===MetricsQueryRowParser.TO) {
                this.state = 70;
                this.match(MetricsQueryRowParser.TO);
            }

            this.state = 73;
            this.timerange();
        }

        this.state = 80;
        _la = this._input.LA(1);
        if(_la===MetricsQueryRowParser.USING || _la===MetricsQueryRowParser.FUNCTION_NAME_NO_ARGS) {
            this.state = 77;
            _la = this._input.LA(1);
            if(_la===MetricsQueryRowParser.USING) {
                this.state = 76;
                this.match(MetricsQueryRowParser.USING);
            }

            this.state = 79;
            this.functionNameNoArgs();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function QuantizeOperatorContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MetricsQueryRowParser.RULE_quantizeOperator;
    return this;
}

QuantizeOperatorContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
QuantizeOperatorContext.prototype.constructor = QuantizeOperatorContext;

QuantizeOperatorContext.prototype.QUANTIZE = function() {
    return this.getToken(MetricsQueryRowParser.QUANTIZE, 0);
};

QuantizeOperatorContext.prototype.enterRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.enterQuantizeOperator(this);
	}
};

QuantizeOperatorContext.prototype.exitRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.exitQuantizeOperator(this);
	}
};

QuantizeOperatorContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MetricsQueryRowVisitor ) {
        return visitor.visitQuantizeOperator(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MetricsQueryRowParser.QuantizeOperatorContext = QuantizeOperatorContext;

MetricsQueryRowParser.prototype.quantizeOperator = function() {

    var localctx = new QuantizeOperatorContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, MetricsQueryRowParser.RULE_quantizeOperator);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 82;
        this.match(MetricsQueryRowParser.QUANTIZE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TimerangeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MetricsQueryRowParser.RULE_timerange;
    return this;
}

TimerangeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TimerangeContext.prototype.constructor = TimerangeContext;

TimerangeContext.prototype.INT = function() {
    return this.getToken(MetricsQueryRowParser.INT, 0);
};

TimerangeContext.prototype.TIMEQUANTIFIER = function() {
    return this.getToken(MetricsQueryRowParser.TIMEQUANTIFIER, 0);
};

TimerangeContext.prototype.enterRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.enterTimerange(this);
	}
};

TimerangeContext.prototype.exitRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.exitTimerange(this);
	}
};

TimerangeContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MetricsQueryRowVisitor ) {
        return visitor.visitTimerange(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MetricsQueryRowParser.TimerangeContext = TimerangeContext;

MetricsQueryRowParser.prototype.timerange = function() {

    var localctx = new TimerangeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, MetricsQueryRowParser.RULE_timerange);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 84;
        this.match(MetricsQueryRowParser.INT);
        this.state = 85;
        this.match(MetricsQueryRowParser.TIMEQUANTIFIER);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FunctionNameNoArgsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MetricsQueryRowParser.RULE_functionNameNoArgs;
    return this;
}

FunctionNameNoArgsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FunctionNameNoArgsContext.prototype.constructor = FunctionNameNoArgsContext;

FunctionNameNoArgsContext.prototype.FUNCTION_NAME_NO_ARGS = function() {
    return this.getToken(MetricsQueryRowParser.FUNCTION_NAME_NO_ARGS, 0);
};

FunctionNameNoArgsContext.prototype.enterRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.enterFunctionNameNoArgs(this);
	}
};

FunctionNameNoArgsContext.prototype.exitRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.exitFunctionNameNoArgs(this);
	}
};

FunctionNameNoArgsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MetricsQueryRowVisitor ) {
        return visitor.visitFunctionNameNoArgs(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MetricsQueryRowParser.FunctionNameNoArgsContext = FunctionNameNoArgsContext;

MetricsQueryRowParser.prototype.functionNameNoArgs = function() {

    var localctx = new FunctionNameNoArgsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, MetricsQueryRowParser.RULE_functionNameNoArgs);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 87;
        this.match(MetricsQueryRowParser.FUNCTION_NAME_NO_ARGS);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AggregationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MetricsQueryRowParser.RULE_aggregation;
    return this;
}

AggregationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AggregationContext.prototype.constructor = AggregationContext;

AggregationContext.prototype.aggregationClause = function() {
    return this.getTypedRuleContext(AggregationClauseContext,0);
};

AggregationContext.prototype.enterRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.enterAggregation(this);
	}
};

AggregationContext.prototype.exitRule = function(listener) {
    if(listener instanceof MetricsQueryRowListener ) {
        listener.exitAggregation(this);
	}
};

AggregationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MetricsQueryRowVisitor ) {
        return visitor.visitAggregation(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MetricsQueryRowParser.AggregationContext = AggregationContext;

MetricsQueryRowParser.prototype.aggregation = function() {

    var localctx = new AggregationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 22, MetricsQueryRowParser.RULE_aggregation);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 89;
        this.aggregationClause();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AggregationClauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MetricsQueryRowParser.RULE_aggregationClause;
    return this;
}

AggregationClauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AggregationClauseContext.prototype.constructor = AggregationClauseContext;

AggregationClauseContext.prototype.functionNameNoArgs = function() {
    return this.getTypedRuleContext(FunctionNameNoArgsContext,0);
};

AggregationClauseContext.prototype.dimensionKey = function() {
    return this.getTypedRuleContext(DimensionKeyContext,0);
};

AggregationClauseContext.prototype.BY = function() {
    return this.getToken(MetricsQueryRowParser.BY, 0);
};
